package invalid;

public class DigitalBookInterface {
    void deliver() {
        System.out.println("Delivered to you library. Check it out in your account!");
    }
}
