package invalid;

public class PaperbackBookInterface {
    void deliver() {
        System.out.println("Dispatched from warehouse. It will arrive soon at your address!");
    }
}
